<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/info_decrypt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/select_decrypt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_encrypt_text" />

    <Button
        android:id="@+id/decrypt_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/decrypt"
        app:layout_constraintStart_toEndOf="@+id/select_decrypt_spinner"
        app:layout_constraintTop_toBottomOf="@+id/info_decrypt_text" />

    <TextView
        android:id="@+id/info_encrypt_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:text="@string/select_encrypt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_encrypt_text"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/choose_file"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_encrypt_text" />

    <Button
        android:id="@+id/crypt_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/encrypt"
        app:layout_constraintStart_toEndOf="@+id/select_encrypt_text"
        app:layout_constraintTop_toBottomOf="@+id/info_encrypt_text" />

    <Spinner
        android:id="@+id/select_decrypt_spinner"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_decrypt_text" />

</androidx.constraintlayout.widget.ConstraintLayout>